Add header logo size styles
Add styles for header logo size in custom.css

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -257,3 +257,9 @@ body.dark-mode .testimonial-two__single {
     max-width: 360px;
     margin: 0 auto;
 }
+/* HEADER LOGO SIZE */
+.main-menu-three__logo img {
+  width: 180px;   /* change this value */
+  height: auto;
+}
+
